--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5, h6 {
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-  <img class="w3-image" src="../images/pexels-leonid-danilov-6483273.webp" alt="Dog playing in the snow" width="1600" height="800">
+  <img class="w3-image" src="images/pexels-leonid-danilov-6483273.webp" alt="Dog playing in the snow" width="1600" height="800">
   <div class="w3-display-bottomleft w3-padding-large w3-opacity">
     <h1 class="w3-xxlarge">Every animal deserves a home, not just a cage.</h1>
   </div>
@@ -42,7 +42,7 @@ h1, h2, h3, h4, h5, h6 {
   <!-- About Section -->
   <div class="w3-row w3-padding-64" id="about">
     <div class="w3-col m6 w3-padding-large w3-hide-small">
-     <img src="../images/willian-justen-de-vasconcellos-1hBWrLIDSCc-unsplash_1.webp" class="w3-round w3-image w3-opacity-min" alt="Kitten playing" width="600" height="750">
+     <img src="images/willian-justen-de-vasconcellos-1hBWrLIDSCc-unsplash_1.webp" class="w3-round w3-image w3-opacity-min" alt="Kitten playing" width="600" height="750">
     </div>
 
     <div class="w3-col m6 w3-padding-large">
@@ -76,7 +76,7 @@ h1, h2, h3, h4, h5, h6 {
     </div>
     
     <div class="w3-col l6 w3-padding-large">
-      <img src="../images/tadeusz-lakota-tk5LWGNiWVs-unsplash.webp" class="w3-round w3-image w3-opacity-min" alt="Dog and owner" style="width:100%">
+      <img src="images/tadeusz-lakota-tk5LWGNiWVs-unsplash.webp" class="w3-round w3-image w3-opacity-min" alt="Dog and owner" style="width:100%">
     </div>
   </div>
 
