--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@ h1, h2, h3, h4, h5, h6 {
   <div class="w3-container w3-padding-64" id="contact">
     <h1>Contact Us: Post-Rapture Pet Care</h1><br>
     <p>We're here for you and your pets, before and after any unexpected celestial events. Whether you have questions, concerns, or simply want to chat about your pet's favorite toy, we're always eager to connect with fellow animal lovers.</p>
-    <p class="w3-text-blue-grey w3-large"><b> Post-Rapture Pet Care, 1110 South 10th Street, Terre Haute, IN</b></p>
-    <p>Reach out directly: phone 812-240-0846 or email postrapturepetcare@gmail.com or leave a message below.</p>
+    <p class="w3-text-blue-grey w3-large"><b> Post-Rapture Pet Care, Terre Haute, IN</b></p>
+    <p>Reach out directly: phone xxx-xxx-xxxx or email postrapturepetcare@gmail.com or leave a message below.</p>
     <form action="/action_page.php" target="_blank">
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
