--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@ h1, h2, h3, h4, h5, h6 {
     <!-- Right-sided navbar links. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#subscribe" class="w3-bar-item w3-button">Subscribe</a>
+      <a href="#whychooseus" class="w3-bar-item w3-button">Why Choose Us?</a>
       <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+      <a href="/login/login.html" class="w3-bar-item w3-button">Login</a>
     </div>
   </div>
 </div>
@@ -55,8 +56,8 @@ h1, h2, h3, h4, h5, h6 {
   
   <hr>
   
-  <!-- Menu Section -->
-  <div class="w3-row w3-padding-64" id="menu">
+  <!-- Why Choose Us? Section -->
+  <div class="w3-row w3-padding-64" id="whychooseus">
     <div class="w3-col l6 w3-padding-large">
       <h1 class="w3-center">Why Choose Us?</h1><br>
       <h4>Trained Caregivers:</h4>
