--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ h1, h2, h3, h4, h5, h6 {
       <a href="#about" class="w3-bar-item w3-button">About</a>
       <a href="#whychooseus" class="w3-bar-item w3-button">Why Choose Us?</a>
       <a href="#contact" class="w3-bar-item w3-button">Contact</a>
-      <a href="/login/login.html" class="w3-bar-item w3-button">Login</a>
+      <a href="login/login.html" class="w3-bar-item w3-button">Login</a>
     </div>
   </div>
 </div>
